# NosoCpp

./: CMakeLists.txt  CMakePresets.json  build_with_cmake_vcpkg.sh  cliff.toml
.github/workflows/: build.yml  main.yml
